[gd_scene load_steps=18 format=3 uid="uid://xdlao8ga3v4o"]

[ext_resource type="Script" path="res://scenes/levels/level_logic.gd" id="1_8iyra"]
[ext_resource type="PackedScene" uid="uid://dhx21j1gjyvoo" path="res://mk2.tscn" id="2_bl024"]
[ext_resource type="Script" path="res://scenes/levels/GameRules.gd" id="2_rwp2o"]
[ext_resource type="PackedScene" uid="uid://hhp1evii0161" path="res://scenes/HUD/game_over.tscn" id="3_ueki5"]
[ext_resource type="Script" path="res://scripts/misc/Camera2D.gd" id="5_bgvlm"]
[ext_resource type="Texture2D" uid="uid://ciyqrvh5sue40" path="res://arts/backgrounds/entrance_back.png" id="5_ixrb8"]
[ext_resource type="Texture2D" uid="uid://pypyg8ichkre" path="res://arts/backgrounds/entrance_front.png" id="6_hwoj1"]
[ext_resource type="Script" path="res://scenes/background.gd" id="7_4bhrf"]
[ext_resource type="Texture2D" uid="uid://dtm43p4uyr3y3" path="res://arts/backgrounds/cave_far.png" id="8_3p5kr"]
[ext_resource type="PackedScene" uid="uid://kffwefl50vvl" path="res://scenes/characters/Cloudy.tscn" id="8_nkilm"]
[ext_resource type="Texture2D" uid="uid://cwa4633b2nm1d" path="res://arts/backgrounds/cave_mid.png" id="9_lwm5a"]
[ext_resource type="Texture2D" uid="uid://c0ovmjoj3b6y8" path="res://arts/backgrounds/cave_near.png" id="10_wl8ug"]
[ext_resource type="PackedScene" uid="uid://b5sjux1n2y5gh" path="res://world.tscn" id="11_6floa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8kvw"]
size = Vector2(1682, 10125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7v0qq"]
size = Vector2(37.3667, 23.67)

[sub_resource type="SystemFont" id="SystemFont_48xml"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_kgh3t"]
font = SubResource("SystemFont_48xml")

[node name="CaveScene" type="Node2D"]
position = Vector2(0, 15)
script = ExtResource("1_8iyra")

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(-6651, 0)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(5900, 2.08165e-12)
shape = SubResource("RectangleShape2D_i8kvw")

[node name="CleaningZone" type="Area2D" parent="LeftWall"]
position = Vector2(-1776, 41)
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall/CleaningZone"]
position = Vector2(21, -6)
scale = Vector2(30, 500)
shape = SubResource("RectangleShape2D_7v0qq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_rwp2o")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 308.0
offset_top = 200.0
offset_right = 349.0
offset_bottom = 223.0
scale = Vector2(6, 6)
text = "11:22"
label_settings = SubResource("LabelSettings_kgh3t")

[node name="Gameover" parent="CanvasLayer" instance=ExtResource("3_ueki5")]
visible = false

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2800, 0)
zoom = Vector2(0.3, 0.3)
script = ExtResource("5_bgvlm")

[node name="ShakeTimer" type="Timer" parent="Camera2D"]

[node name="entrance_back" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(2082, -130)
scale = Vector2(30, 30)
texture = ExtResource("5_ixrb8")

[node name="entrance_front" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(2082, -130)
scale = Vector2(30, 30)
texture = ExtResource("6_hwoj1")

[node name="Player" parent="." groups=["player"] instance=ExtResource("2_bl024")]
position = Vector2(2798, 1178)

[node name="Cloudy" parent="." instance=ExtResource("8_nkilm")]
position = Vector2(6692, -126)

[node name="background" type="Node2D" parent="."]
script = ExtResource("7_4bhrf")

[node name="far" type="Sprite2D" parent="background"]
z_index = -100
scale = Vector2(30, 30)
texture = ExtResource("8_3p5kr")

[node name="far2" type="Sprite2D" parent="background"]
z_index = -100
position = Vector2(9600, 2.08165e-12)
scale = Vector2(30, 30)
texture = ExtResource("8_3p5kr")

[node name="mid" type="Sprite2D" parent="background"]
z_index = -100
scale = Vector2(30, 30)
texture = ExtResource("9_lwm5a")

[node name="mid2" type="Sprite2D" parent="background"]
z_index = -100
position = Vector2(8000, 2.08165e-12)
scale = Vector2(30, 30)
texture = ExtResource("9_lwm5a")

[node name="near" type="Sprite2D" parent="background"]
z_index = -100
scale = Vector2(30, 30)
texture = ExtResource("10_wl8ug")

[node name="near2" type="Sprite2D" parent="background"]
z_index = -100
position = Vector2(9500, 2.08165e-12)
scale = Vector2(30, 30)
texture = ExtResource("10_wl8ug")

[node name="World" parent="background" instance=ExtResource("11_6floa")]
z_index = 2
position = Vector2(2.08165e-12, 1580)

[connection signal="body_shape_entered" from="LeftWall/CleaningZone" to="." method="_on_cleaning_zone_body_shape_entered"]
[connection signal="timeout" from="CanvasLayer/Timer" to="CanvasLayer" method="_on_timer_timeout"]
